--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,8 +5,8 @@
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 a,
@@ -27,11 +27,5 @@ a,
   body {
     display: flex;
     place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
